<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView_view_event"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:src="@drawable/ic_image_black_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="top|center"
        android:text="@string/tap_to_add_an_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/energyLev" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/weight_range3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/host" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/TextView_view_event_energy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:entries="@array/energy_levels"
            android:layout_weight="0.3" />

        <Spinner
            android:id="@+id/Spinner_view_event_weight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:entries="@array/weight_range"
            android:layout_weight="0.3" />

        <TextView
            android:id="@+id/textView_create_event_host"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            tools:text="andy" />

        <ImageView
            android:id="@+id/imageView_view_profileImg_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            tools:srcCompat="@tools:sample/avatars[1]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_c_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center|start"
            android:text="@string/date" />

        <TextView
            android:id="@+id/textView_view_event_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:layout_weight="1"
            tools:text="03/03/19" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_c_starttime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/start" />

        <TextView
            android:id="@+id/textView_view_event_starttime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            tools:text="14:00" />

        <TextView
            android:id="@+id/textView_c_endtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/end" />

        <TextView
            android:id="@+id/textView_view_event_endtime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            tools:text="1600" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:text="@string/location" />

        <EditText
            android:id="@+id/Textview_view_form_location_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/addresshere"
            android:layout_weight="1.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_c_event_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />

    </LinearLayout>

    <Button
        android:id="@+id/button_c_event_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>